src/css/custom.css
/* ... */
.navbar-sidebar .menu__link:hover:not([disabled]) {
  color: var(--buf-ink-blue-02);
}

.navbar-sidebar .menu__link.menu__link--sublist {
  cursor: pointer;
}

.theme-doc-sidebar-container {
  font-size: 0.875rem;
}

.theme-doc-breadcrumbs {
  display: none;
}

.navbar__items:not(.navbar__items--right) {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.navbar__items--right {
  display: none;
}

.table-of-contents {
  font-size: 0.85rem;
}

.menu__list .menu__link--active {
  color: inherit;
}

.navbar-sidebar__item.menu {
  display: flex;
  flex-direction: column;
}

.navbar__brand {
  height: 50px;
  color: #090a3a;
}

html[data-theme="dark"] {
  .navbar__brand {
    color: var(--ifm-navbar-link-color);
  }
}

.navbar__brand > .navbar__logo {
  height: 100%;
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  .menu__list
  > li
  > a {
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  text-transform: none;
  min-height: 54px;
  color: var(--buf-ink-blue-03);
  padding-left: 1rem;
}

.navbar-sidebar__items > .navbar-sidebar__item:nth-of-type(2) {
  padding-left: 0;
  padding-right: 0;
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  .menu__list-item-collapsible
  > a {
  min-height: 54px;
  padding-left: 1rem;
  padding-right: 26px;
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  .menu__list-item-collapsible:hover {
  background: none;
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  .menu__link:hover:not([disabled]) {
  color: var(--buf-ink-blue-03);
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  ul.menu__list
  > li:not(:last-child)
  > .menu__list-item-collapsible::after {
  width: 100vw;
}

.navbar-sidebar__items
  > .navbar-sidebar__item:nth-of-type(2)
  ul.menu__list
  > li
  > ul.menu__list
  > li
  > a::after {
  width: calc(100% - 2rem);
}

@media (min-width: 997px) {
  .mobile-only {
    display: none;
  }
}

@media (max-width: 996px) {
  .navbar-sidebar {
    max-height: 100vh;
  }

  .navbar-sidebar__items {
    height: calc(100vh - var(--ifm-navbar-height));
  }

  .navbar-sidebar__item.menu > .menu__list {
    overflow: auto;
  }

  .desktop-only {
    display: none;
  }
  .navbar__inner > .navbar__items:not(.navbar__items--right) {
    flex-direction: row-reverse;
  }
  .navbar__toggle {
    border: 1px solid var(--buf-grey-01);
    border-radius: 2px;
    font-size: 1rem;
    gap: 0.5rem;
    line-height: 20px;
    margin: 0;
    padding: 9px 1rem;
    align-items: center;
    font-family: var(--buf-mono-font);
    display: flex;
    text-transform: uppercase;
  }
}

